--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.0.11
+autopep8==1.4.4
 bcrypt==3.1.7
 blinker==1.4
 cffi==1.12.3
@@ -15,6 +16,7 @@ Flask-SimpleMDE==0.3.0
 Flask-SQLAlchemy==2.4.0
 Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.1.0
@@ -23,6 +25,7 @@ MarkupSafe==1.1.1
 pep8==1.7.1
 Pillow==6.1.0
 psycopg2==2.8.3
+pycodestyle==2.5.0
 pycparser==2.19
 python-dateutil==2.8.0
 python-dotenv==0.10.3
